crates/cli/tests/snapshots/jobs__jobs_lists_empty_history.snap
---
source: crates/cli/tests/jobs.rs
expression: output
---
RunOutput {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "No recent daemon jobs\n",
    stderr: "",
}
