crates/cli/tests/snapshots/jobs__jobs_on_a_terminal_at_140_columns.snap
---
source: crates/cli/tests/jobs.rs
expression: wide.stdout
---
[pv] jobs                                                                                                                             v0.2.5
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────

ID          KIND       SCOPE             STATUS       STARTED               FINISHED              SUMMARY
job_000003  install    resource:redis:7  ● running    <timestamp>  -                     -
job_000002  reconcile  project:acme      ✗ failed     <timestamp>  <timestamp>  Gateway failed to start
job_000001  setup      system            ✓ succeeded  <timestamp>  <timestamp>  Installed default resources

●  3 jobs · 1 running · 1 failed
   ↳ json  pv jobs --json
