crates/cli/tests/snapshots/jobs__jobs_on_a_terminal_at_80_columns.snap
---
source: crates/cli/tests/jobs.rs
expression: narrow.stdout
---
[pv] jobs                                                                 v0.2.4
────────────────────────────────────────────────────────────────────────────────

job_000003
   kind      install
   scope     resource:redis:7
   status    ● running
   started   <timestamp>
   finished  -
   summary   -

job_000002
   kind      reconcile
   scope     project:acme
   status    ✗ failed
   started   <timestamp>
   finished  <timestamp>
   summary   Gateway failed to start

job_000001
   kind      setup
   scope     system
   status    ✓ succeeded
   started   <timestamp>
   finished  <timestamp>
   summary   Installed default resources

●  3 jobs · 1 running · 1 failed
   ↳ json  pv jobs --json
