crates/cli/tests/snapshots/jobs__jobs_on_a_terminal_empty.snap
---
source: crates/cli/tests/jobs.rs
expression: empty.stdout
---
○  No recent daemon jobs
   ↳ start  pv daemon:enable
